# voice-assistant-custom-commands

./: .gitignore  .gitignore.local  .gitmodules  AMD_WHISPER_CPP_ACTION_PLAN.md  AMD_WHISPER_NPU_SUCCESS.md  CMakeLists.txt  CONTRIBUTING.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_QUICKSTART.md  DEPLOYMENT_STATUS.md  DEPLOY_README.md  DEV-SETUP.md  DEV_SETUP.md  END_TO_END_TEST_RESULTS.md  Makefile  NPU_DEPLOYMENT_SUCCESS.md  NPU_EXPLORATION_COMPLETE.md  NPU_INTEGRATION_ANALYSIS.md  NPU_INTEGRATION_PLAN.md  NPU_MIC_POC.md  NPU_QUIET_PATCH.md  QUICKSTART.md  README.md  SUMMARY.md  SYNC_STATUS.md  TEST_RESULTS.md  TOOL_SYSTEM_IMPLEMENTATION.md  TOOL_SYSTEM_TEST_RESULTS.md  UPDATE_NPU_FINDINGS.md  WHISPER_NPU_PERFORMANCE.md  claude.resume  compare-machines.py  deploy.sh  deploy_to_dev.py  install-wyoming.sh  install.sh  run-tts-test.py  run-voice-test.py  send_tts_async  setup_deployment.sh  (+8 more)
.claud.ai/: PROJECT_CONTEXT.md
.claude/: ALWAYS_READ_FIRST.md  TESTING_CHECKLIST.md
custom/talk-llama/: MODIFICATIONS.md  talk-llama.cpp  talk-llama.cpp.bak2  test-wyoming-client.cpp  tool-parser.cpp  tool-parser.h  tool-system.cpp  tool-system.h  tts-request.c  tts-request.h  tts-socket.h  wyoming-client.cpp  wyoming-client.h
custom/talk-llama/tools/: tools.json
custom/wyoming-piper/: MODIFICATIONS.md  __main__.py  handler.py  process.py
docs/: FUTURE.md  TOOL_CALLING.md  TOOL_SYSTEM.md  TOOL_SYSTEM_INVESTIGATION.md  TTS_FEEDBACK_PREVENTION.md  WYOMING.md  WYOMING_AUDIO_PROTOCOL.md  WYOMING_CUSTOM_EVENTS.md  WYOMING_INTEGRATION.md  WYOMING_PROPER_IMPLEMENTATION.md
scripts/: README.md  build_piper.sh
talk-llama-fast/: Makefile  README.md  run_talk_llama2-7b  talk-llama-fast.code-workspace
talk-llama-fast/examples/: common.cpp  common.h
talk-llama-fast/examples/talk-llama/: CMakeLists.txt  llama.cpp  llama.h  talk-llama-fast.cpp  talk-llama-orig.cpp  talk-llama.cpp  tts-request.c  tts-socket-test  tts-socket-test.c  tts-socket.c  tts-socket.h
talk-llama-fast/examples/talk-llama/bkp_my/: llama.cpp  llama.h  talk-llama.cpp
talk-llama-fast/examples/talk-llama/new/: llama.cpp  llama.h
talk-llama-fast/src/: whisper.cpp
tests/: README.md  README_TOOL_TESTS.md  SESSION_STATE.md  SESSION_STATE_FINAL.md  TEST_INFRASTRUCTURE.md  TEST_RESULTS.md  audio_generator.py  audio_verifier.py  compare_whisper_models.py  end_to_end_latency.py  latency_benchmark.sh  measure_end_to_end_latency.py  run_tests.py  run_tool_tests.py  test_cases.yaml  test_cases_tool_system.yaml  test_generation_interrupt.py  test_newline_strip.py  test_real_interrupt.py  test_tool_audio.py  test_tool_parser_unit.cpp  test_tool_system.py  test_wyoming_piper_unit.py
tests/results/: END_TO_END_LATENCY_RESULTS.md  LATENCY_BREAKDOWN.md  test_report_20260316_150826.txt  test_report_20260316_151224.txt  test_report_20260316_153152.txt  test_report_20260316_155905.txt  test_report_20260316_164325.txt
whisper.cpp/examples/: common.cpp  common.h
whisper.cpp/ggml/src/ggml-cuda/: common.cuh
whisper.cpp/src/: whisper.cpp
wyoming-piper/: MODIFICATIONS.md  load_env  pyproject.toml  run_wyo  test_wyo
wyoming-piper/wyoming_piper/: __init__.py  __main__.py  handler.py  process.py
